--- a/ci/tasks/package.yml
+++ b/ci/tasks/package.yml
@@ -18,4 +18,6 @@ run:
   args: [
     --input-dir, boot-helloworld,
     --output-dir, package,
+    --artifactId, boot-helloworld,
+    --packaging, jar
   ]
