--- a/manifest.yml
+++ b/manifest.yml
@@ -1,4 +1,4 @@
 ---
 applications:
 - name: boot-helloworld
-  path: package/boot-helloworld-0.0.1-SNAPSHOT.jar
+  path: boot-helloworld-0.0.1-SNAPSHOT.jar
